fix: update reply button border color for better visibility

--- a/less/forum.less
+++ b/less/forum.less
@@ -19,8 +19,9 @@
 }
 
 .item-reply .Button {
-  border: 2px solid white;
+  border: 2px solid #c22126;
   border-radius: 4px;
+  color: #c22126;
 }
 
 @media (min-width: 1280px) {
